# Clueless-Admin

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  pyproject.toml
data/input/: directory_list.txt
data/output/ebpf_monitor_20250717_141012/: monitor_loaded_ebpf_20250717_141012_0.json  monitor_loaded_ebpf_20250717_141012_1.json  monitor_loaded_ebpf_20250717_141012_2.json  monitor_loaded_ebpf_20250717_141012_3.json  monitor_loaded_ebpf_20250717_141012_4.json  monitor_loaded_ebpf_20250717_141012_5.json  monitor_loaded_ebpf_20250717_141012_6.json  monitor_loaded_ebpf_20250717_141012_7.json  monitor_loaded_ebpf_20250717_141012_8.json  monitor_loaded_ebpf_20250717_141012_9.json
data/output/ebpf_monitor_20250717_141154/: monitor_loaded_ebpf_20250717_141154_0.json  monitor_loaded_ebpf_20250717_141154_1.json  monitor_loaded_ebpf_20250717_141154_2.json  monitor_loaded_ebpf_20250717_141154_3.json  monitor_loaded_ebpf_20250717_141154_4.json  monitor_loaded_ebpf_20250717_141154_5.json  (+2 more)
model/: response.py
scripts/: fix_permissions_output_data.sh
src/: ebpf_monitor.py  ftrace_monitor.py  io_uring_monitor.py  list_modules.py  main.py  modules_monitor.py  network_trace.py  networking_monitor.py  syscall_table_monitor.py  utils.py
src/clueless_admin/: ebpf_monitor.py  file_system_monitor.py  ftrace_monitor.py  io_uring_monitor.py  kallsyms_monitor.py  modules_monitor.py  networking_monitor.py  process_monitor.py  response.py  syscall_monitor.py  syscall_table_monitor.py
test/: README.md  test_ebpf_monitor.py  test_io_uring_monitor.py
(+86 files in other folders)
