[project]
name = "userland"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "importchecker>=3.0",
    "isort>=6.0.1",
    "numba>=0.61.2",
    "pyroute2>=0.9.2",
    "pytest>=8.4.1",
    "python-iptables>=1.2.0",
]
