[project]
name = "clueless-admin"
version = "0.1.0"
description = "Clueless Administrator - Linux system monitoring tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "importchecker>=3.0",
    "isort>=6.0.1",
    "nuitka>=2.7.14",
    "numba>=0.61.2",
    "pyroute2>=0.9.2",
    "pytest>=8.4.1",
    "python-iptables>=1.2.0",
]

[project.optional-dependencies]
build = [
    "nuitka>=2.0.0",
    "ordered-set>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
clueless-admin = "clueless_admin.main:main"
